updated the parenthesis

--- a/forms.html
+++ b/forms.html
@@ -10,17 +10,17 @@
         <input name="id" value="123" />
         <br>
         Checkboxes
-        <input checked="checked" name=“remember" type="checkbox" />
+        <input checked="checked" name="remember" type="checkbox" />
         <br>
         Radio Buttons 
         <input name="gender" type="radio" value="F" />
         <input name="gender" type="radio" value="M" />
         <br>
         Drop-Down Menus
-        <select name=“state">
+        <select name="state">
             <option value=""></option>
-            <option value=“MA"></option>
-            <option value=“NY"></option>
+            <option value="MA"></option>
+            <option value="NY"></option>
         </select> 
         <br>
     </body>
